bring branch up to date before starting work on api_users
