# server/swagger/v1/swagger.yaml
@@ -71,13 +71,6 @@ paths:
       responses:
         '204':
           description: meeting interval deleted
-          schema:
-            type: object
-            properties:
-              interval:
-                type: string
-            required:
-            - interval
         '404':
           description: interval not found
     patch:
@@ -105,12 +98,101 @@ paths:
       responses:
         '204':
           description: meeting interval updated
+        '404':
+          description: interval not found
+  "/api/v1/programminglanguages/":
+    get:
+      summary: Displays all Programming Languages
+      tags:
+      - List all programming languages
+      responses:
+        '200':
+          description: list programming languages
+    post:
+      summary: Creates a programming language
+      tags:
+      - Create a  Programming Language
+      consumes:
+      - application/json
+      parameters:
+      - name: programminglanguage
+        in: body
+        schema:
+          type: object
+          properties:
+            language:
+              type: string
+          required:
+          - language
+      responses:
+        '201':
+          description: inspect programming lanaguage creation
+        '422':
+          description: invalid request
+  "/api/v1/programminglanguages/{id}":
+    get:
+      summary: Retrieves a programming language
+      tags:
+      - Return Programming Language
+      consumes:
+      - application/json
+      parameters:
+      - name: id
+        in: path
+        type: string
+        required: true
+      responses:
+        '200':
+          description: programming language found
           schema:
             type: object
             properties:
-              interval:
+              language:
                 type: string
             required:
-            - interval
+            - language
         '404':
           description: interval not found
+    delete:
+      summary: Deletes a programming language
+      tags:
+      - Delete Programmimg Language
+      consumes:
+      - application/json
+      parameters:
+      - name: id
+        in: path
+        type: string
+        required: true
+      responses:
+        '204':
+          description: pogramming language deleted
+        '404':
+          description: language not found
+    patch:
+      summary: Update a programming language
+      tags:
+      - Update Programming Language
+      description: Note that if successful, you do not recieve the updated content
+        back. You will only recieve a 204
+      consumes:
+      - application/json
+      parameters:
+      - name: id
+        in: path
+        type: string
+        required: true
+      - name: programminglanguage
+        in: body
+        schema:
+          type: object
+          properties:
+            language:
+              type: string
+          required:
+          - language
+      responses:
+        '204':
+          description: programming language updated
+        '404':
+          description: language not found
